# EEG-Advanced-Analytics

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  data_loading.py  data_processing.py  main.py  pyproject.toml  requirements.txt  statistical_analysis.py  visualization.py
.github/workflows/: ci.yml
src/eeg_advanced_analytics/: __init__.py  __main__.py  cli.py  config.py  constants.py  data_loading.py  data_processing.py  mne_spike.py  pipeline.py  statistical_analysis.py  visualization.py
tests/: conftest.py  test_config.py  test_data_loading.py  test_data_processing.py  test_mne_spike.py  test_statistical_analysis.py  test_visualization.py
